--- a/index.html
+++ b/index.html
@@ -37,13 +37,7 @@ header{
 }
 .products{display:grid;grid-template-columns:repeat(2,1fr);gap:10px}
 .product{position:relative}
-.menu{
-  position:absolute;
-  top:6px;
-  right:8px;
-  font-size:20px;
-  cursor:pointer;
-}
+.menu{position:absolute;top:6px;right:8px;font-size:20px;cursor:pointer}
 button{
   width:100%;
   padding:10px;
@@ -111,7 +105,6 @@ button{
 <button class="blue" onclick="showShiftReport('Evening')">Evening shift</button>
 <button class="blue" onclick="exportExcel()">📥 Export Excel</button>
 <button class="red" onclick="cleanPOS()">🧹 Clean</button>
-
 <div id="reports"></div>
 </div>
 </div>
@@ -255,7 +248,7 @@ function checkout(){
   renderCart();
 }
 
-/* SCAN SELL */
+/* SCAN SELL (ZOOM ×2) */
 function toggleScanSell(){
   if(scanSellOpen){
     scannerInst.stop();
@@ -266,25 +259,33 @@ function toggleScanSell(){
 
   scanner.classList.remove("hidden");
   scannerInst=new Html5Qrcode("scanner");
-  scannerInst.start({facingMode:"environment"},{fps:10,qrbox:250},code=>{
-    let p=PRODUCTS.find(x=>x.code===code);
-    if(!p)return alert("Not found");
-    addToCart(p.id);
-  });
+  scannerInst.start(
+    {facingMode:"environment"},
+    {fps:10,qrbox:220,aspectRatio:1,advanced:[{zoom:2}]},
+    code=>{
+      let p=PRODUCTS.find(x=>x.code===code);
+      if(!p)return alert("Not found");
+      addToCart(p.id);
+    }
+  );
   scanSellOpen=true;
 }
 
-/* SCAN ASSIGN */
+/* SCAN ASSIGN (ZOOM ×2) */
 function startScanAssign(){
   scanner.classList.remove("hidden");
   let qr=new Html5Qrcode("scanner");
-  qr.start({facingMode:"environment"},{fps:10,qrbox:250},code=>{
-    qr.stop();
-    scanner.classList.add("hidden");
-    let p=PRODUCTS.find(x=>x.id===scanAssignId);
-    p.code=code;
-    db.collection("products").doc(p.id).set(p);
-  });
+  qr.start(
+    {facingMode:"environment"},
+    {fps:10,qrbox:220,aspectRatio:1,advanced:[{zoom:2}]},
+    code=>{
+      qr.stop();
+      scanner.classList.add("hidden");
+      let p=PRODUCTS.find(x=>x.id===scanAssignId);
+      p.code=code;
+      db.collection("products").doc(p.id).set(p);
+    }
+  );
 }
 
 /* ADMIN */
